<resources>
    <string name="app_name">币比</string>
    <string name="Home">首页</string>
    <string name="Orders">订单</string>
    <string name="Balance">账户</string>
    <string name="Profile">我的</string>
    <string name="NewPredictions">最新预测</string>
    <string name="HotPredictions">热门预测</string>
    <string name="CryptoTopics">币圈专题</string>
    <string name="HotEvent">热点事件</string>
    <string name="Predictions">预测</string>
    <string name="SportEvent">体育赛事</string>
    <string name="RecommendedPredictions">推荐预测</string>
    <string name="ProfitsinTotal">累计收益</string>
    <string name="Ongoing">进行中</string>
    <string name="ToBeSettled">待结算</string>
    <string name="Ended">已结束</string>
    <string name="Win">胜场</string>
    <string name="WinRate">胜率</string>
    <string name="ParticipationTime">参与时间：</string>
    <string name="Account">账户</string>
    <string name="CreateWallet">创建/导入钱包</string>
    <string name="WalletManagement">钱包管理</string>
    <string name="ContactUs">联系我们</string>
    <string name="Set">设置</string>
    <string name="WeChat">微信    seeryuanuan</string>
    <string name="WeChatPublicNumber">微信公众号   SEER区块链</string>
    <string name="AboutUs">关于我们</string>
    <string name="LanguageManager">语言管理</string>
    <string name="ThePredictionOptionYouChooseIs">您选择的预测选项是:</string>
    <string name="TheRangofPredictionAmount">预测范围:</string>
    <string name="PleaseEnterAnumber">请输入数字</string>
    <string name="TransactionFee">手续费: </string>
    <string name="Balances">余额</string>
    <string name="Confirm">确认</string>
    <string name="BackUp">备份</string>
    <string name="PleaseEnterThePassword">请输入钱包密码</string>
    <string name="ThePasswordIsIncorrect">支付密码错误，请重新输入</string>
    <string name="Done">预测成功</string>
    <string name="History">查看记录</string>
    <string name="Continue">继续预测</string>
    <string name="Recharge">充值</string>
    <string name="Send">转账</string>
    <string name="Cash">提现</string>
    <string name="TransactionRecords">近期交易记录</string>
    <string name="TransactionDate">交易时间: </string>
    <string name="TransactionTypes">交易类型: </string>
    <string name="Users">交易用户: </string>
    <string name="ReceiversAddress">转账用户 </string>
    <string name="CashAddress">提现地址</string>
    <string name="CashAmount">提现金额</string>
    <string name="Amount">转账金额 </string>

    <string name="ChangePassword">修改密码</string>
    <string name="DeleteWallet">删除钱包</string>
    <string name="CurrentPassword">当前密码</string>
    <string name="NewPassword">新密码</string>
    <string name="RepeatNewPassword">请再次输入新密码</string>
    <string name="ForgotPassword">忘记密码？导入助记词可重置密码</string>
    <string name="importrightnow">立即导入</string>
    <string name="Attention">注意！删除钱包前，请务必确认已备份好钱包助记词，否则将丢失你的钱包资产</string>
    <string name="cancle">取消</string>
    <string name="Createwallet">创建钱包</string>
    <string name="ImportWallet">导入钱包</string>
    <string name="Username">用户名</string>
    <string name="PleaseEnterUsername">请输入用户名</string>
    <string name="PleaseEnterCashAmount">请输入提现金额</string>
    <string name="PleaseEnterCashAddress">请输入提现地址</string>
    <string name="PleaseEntetAmount">请输入转账金额</string>
    <string name="Password">密码</string>
    <string name="characters">请输入密码，不少于8位字符</string>
    <string name="ConfirmPassword">确认密码</string>
    <string name="PleaseRepeatPassword">请再次输入密码</string>
    <string name="readAndagree">我已阅读并同意</string>
    <string name="serviceAndprivacy">服务及隐私条款</string>
    <string name="RememberThepassword">请牢记钱包密码，币比不储存密码，也无法帮您找回</string>
    <string name="TakeAscreenshot">请勿截图</string>
    <string name="RemindBriank">泄露助记词将导致资产丢失，请认真抄写并放在安全的地方，切勿截屏</string>
    <string name="WriteBraink">请记下你的钱包助记词并保存到安全的地方</string>
    <string name="restoreBraink">钱包助记词用于恢复钱包资产，拥有助记词即可完全控制钱包资产，请务必妥善保管，丢失助词即丢失钱包资产。币比不存储用户助记词，无法提供找回功能</string>
    <string name="BackUpBraink">备份助记词</string>
    <string name="RightNowBraink">立即备份助记词</string>
    <string name="AssetsSecurity">为了保障资产安全，请导出[助记词]并抄写到安全的地方，千万不要保存到电脑还有网络上。建议备份完成后立即恢复一次，以确保安全。然后尝试转入、转出小额资产开始使用</string>
    <string name="PleaseclicBraink">请根据你记下的助记词，按顺序点击，验证你备份的助记词正确无误</string>
    <string name="BackupDone">备份成功</string>
    <string name="RemoveBraink">你备份的助记词顺序验证正确，币比将移除该助记词</string>
    <string name="BackupFailure">备份失败</string>
    <string name="checkBraink">请检查你的助记词</string>
    <string name="EnterBraink">输入助记词，用空格分隔</string>
    <string name="next">下一步</string>
    <string name="English">English</string>
    <string name="Chinese">中文</string>
    <string name="prizePoolprediction">奖池型预测</string>
    <string name="transactionPrediction">交易型预测</string>
    <string name="fixedodds">固定赔率</string>
    <string name="advancedOdds">赔率是参与预测的实际赔率，预测成功后的奖金将以此赔率计算</string>
    <string name="pvpOdds">赔率是以当前参与预测的比例计算的,派奖赔率以预测截至时参与预测的比例计算</string>
    <string name="FinancialWorld">用区块链技术打造更美好的金融世界</string>
    <string name="Accounto">账号里的代币如何获得</string>
    <string name="onesupportERC">1、支持Erc-20 SEER的交易所或钱包：​</string>
    <string name="supportdetail">将您在交易所或以太钱包的SEER自动兑换至主网（币比）钱包。系统已自动为您的账号分配了一个ETH地址。将交易所或以太钱包中的SEER代币转入该地址，Seer主网（币比）帐号即可自动获得等额SEER，第一次建议小额转账先试一下</string>
    <string name="ETHAddress">ETH地址:</string>
    <string name="ETHAddress_btn">绑定ETH</string>
    <string name="twosupportERC">2、BTS资产GDEX.SEER：</string>
    <string name="twpsupportERCDetail">将 BTS  内盘的GDEX.SEER 转账至 seer.gateway（数字 ID#1.2.974186）转账 memo 备注填：“seer#主网帐号”（双引号不需要填写），即可完成主网 SEER 自动发放，第一次建议小额转账先试一下。​</string>
    <string name="threeSupport">3、第三方兑换</string>
    <string name="threeSupportDetail">请联系官方认证到第三方承兑商,仅支持Dapp内转账</string>
    <string name="Wechat">微信: hongshaorouwanzi​</string>
    <string name="finalOdds">此赔率是最终派奖的赔率</string>
    <string name="prediction">预测</string>
    <string name="Cutoff">已截止</string>
    <string name="TransactionAmount">交易金额</string>
    <string name="Deadline">截止时间 : </string>
    <string name="more">更多</string>
    <string name="fiveminutes">五分钟之内只允许注册一位用户</string>
    <string name="Userexists">用户已存在,请重新注册</string>
    <string name="Bindingexsites">绑定ETH用户已存在</string>
    <string name="select">选择</string>
    <string name="pay">支出 </string>
    <string name="income">收入 </string>
    <string name="noprize">未中奖</string>
    <string name="usernamejudge">不少于6位由数字和小写字符组成的用户名</string>
    <string name="currentpassword">请输入当前密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="BalanceIsNoEnough">余额不足</string>
    <string name="loading">加载中...</string>
    <string name="Correct">正确</string>
    <string name="nolessthanusename">不少于6位由数字和小写字符组成的用户名</string>
    <string name="howget">如何获取代币</string>
    <string name="limitprediction">不在预测范围</string>
    <string name="inputContentEmpty">输入内容为空</string>
    <string name="inputContentError">输入密码有误</string>
    <string name="sell">卖出</string>
    <string name="buy">买入</string>
    <string name="sellSeer">卖出num份大概需要amountSEER</string>
    <string name="sellUSdt">卖出num份大概需要amountUSDT</string>
    <string name="sellPFC">卖出num份大概需要amountPFC</string>
    <string name="buySeer">购买num份大概需要amountSEER</string>
    <string name="buyUSDT">购买num份大概需要amountUSDT</string>
    <string name="buyPFC">购买num份大概需要amountPFC</string>
    <string name="selljudege">卖出份数大于买入份数</string>
    <string name="searchFail">查询失败</string>
    <string name="usernamejudgenum">用户名必须包含数字</string>
    <string name="accountExists">账户已存在</string>
    <string name="checkmnemonic">请检查您的助记词</string>
    <string name="entermnemonic">请输入您的助记词</string>
    <string name="enterPwd">请输入您的密码</string>
    <string name="enterCurrent">请输入当前密码</string>
    <string name="newoldpwd">当前密码不可以和新密码一致</string>
    <string name="alphabetic">用户名首位必须是字母</string>
    <string name="capitalletters">不能包含大写字母</string>
    <string name="Inconsistentpassword">密码不一致</string>
    <string name="checkAddress">请勾选地址</string>
    <string name="Transferamount">转账金额必须大于0</string>
    <string name="checkamount">请检查转账金额</string>
    <string name="cantoneself">不能转账给自己</string>
    <string name="Successfultransfer">成功</string>
    <string name="user">用户不存在</string>
    <string name="nodata">暂无数据</string>
    <string name="walletPwd">请输入钱包密码</string>
    <string name="share">份</string>
    <string name="start">开始体验</string>
    <string name="setSuccess">修改成功</string>
    <string name="remind">提示</string>
    <string name="network">网络错误</string>
    <string name="Addresserror">地址错误</string>
    <string name="pfcbiao">1、支持Erc-20 PFC的交易所或钱包：</string>
    <string name="pfcbiao_usdt">1、支持Erc-20 USDT的交易所或钱包：</string>
    <string name="pfc">将您在交易所或以太钱包的PFC自动兑换至主网（币比）钱包。系统已自动为您的账号分配了一个ETH地址。将交易所或以太钱包中的PFC Token转入该地址，Seer主网（币比）帐号即可自动获得等额PFC，第一次建议小额转账先试一下.</string>
    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>
    <string name="gong">2、第三方兑换：</string>
    <string name="frist">1、支持Omni-USDT的交易所或钱包：</string>
    <string name="ustd">将您在交易所或钱包的USDT自动兑换至主网（币比）钱包。Omni-PFC，系统已自动为您的账号分配了一个BTC地址。将交易所或钱包中的PFC转入该地址，Seer主网（币比）帐号即可自动获得等额PFC，第一次建议小额转账先试一下。</string>

    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal"></string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string name="beizhushouxufei">备注手续费约: </string>
    <string name="beizhui">备注 :</string>
    <string name="limit">限制60个字符</string>
    <string name="zifu">字符</string>
    <string name="currenshouxufei">手续费有变动 以订单手续费为准</string>
    <string name="currencashinput">请输入内容</string>
</resources>
