<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_backgroud"
    android:orientation="vertical"
    tools:context=".accountPacakage.RechargeActivity">

    <com.nyzc.gdm.currencyratio.View.CustomTitleBar
        android:id="@+id/custom_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:left_button_image="@mipmap/icon_left"
        app:show_left_button="true"
        app:title_text="@string/Recharge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/Accounto"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/chongzhibiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/chongzhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/supportdetail"
                android:textSize="@dimen/sp_12" />

            <RelativeLayout
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/ETHAddress"
                    android:layout_centerVertical="true"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/bindingETH"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_15"
                    android:text="@string/ETHAddress_btn"
                    android:textSize="@dimen/sp_9"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>



            <TextView
                android:id="@+id/btn_eth"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_5"
                android:text=""
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/chongzhi_er"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/twosupportERC"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/chongzhi_tex_er"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/twpsupportERCDetail"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/chongzhisan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/threeSupport"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/threeSupportDetail"
                android:textSize="@dimen/sp_12" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:src="@mipmap/wx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:gravity="center_vertical"
                    android:text="@string/Wechat"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>