<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_backgroud"
    tools:context=".uipacakage.CreateWalletActivity">

    <com.nyzc.gdm.currencyratio.View.CustomTitleBar
        android:id="@+id/custom_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:left_button_image="@mipmap/icon_left"
        app:show_left_button="true"
        app:show_right_button="false"
        app:title_text="@string/CreateWallet" />

    <RelativeLayout
        android:id="@+id/rela_create_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_176"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/shape_login_createwallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_title">

        <RelativeLayout
            android:id="@+id/rela_wallet_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58">

            <TextView
                android:id="@+id/tv_create_wallet_name"
                android:layout_width="@dimen/dp_95"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/Username"
                android:textColor="@color/tab_tv_color"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/edit_input_wallet_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_create_wallet_name"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/usernamejudge"
                android:paddingLeft="5dp"
                android:textSize="@dimen/sp_11" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_below="@+id/rela_wallet_name"
            android:background="#c2c2c2" />

        <RelativeLayout
            android:id="@+id/rela_wallet_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:layout_below="@+id/view1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_create_wallet_pwd"
                android:layout_width="@dimen/dp_95"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_18"
                android:text="@string/Password"
                android:textColor="@color/tab_tv_color"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/edit_input_wallet_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_create_wallet_pwd"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/characters"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textSize="@dimen/sp_11" />

        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_below="@+id/rela_wallet_pwd"
            android:background="#c2c2c2" />

        <RelativeLayout
            android:id="@+id/rela_wallet_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:layout_below="@+id/view2">

            <TextView
                android:id="@+id/tv_create_wallet_pwd_again"
                android:layout_width="@dimen/dp_95"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/ConfirmPassword"
                android:textColor="@color/tab_tv_color"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/edit_input_wallet_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_create_wallet_pwd_again"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/PleaseRepeatPassword"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="@dimen/sp_11" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_read_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_15"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rela_create_wallet">

        <ImageView
            android:id="@+id/iv_agree_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/select_agree_service" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readAndagree"
            android:textColor="@color/tab_tv_color"
            android:textSize="@dimen/sp_11" />

        <TextView
            android:id="@+id/tv_service_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceAndprivacy"
            android:textColor="@color/comment_titlebar"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_create_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@mipmap/icon_shadow_wallet"
        android:gravity="center"
        android:text="@string/Createwallet"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_read_service" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:drawableLeft="@mipmap/icon_remind"
        android:drawablePadding="@dimen/dp_6"
        android:text="@string/RememberThepassword"
        android:textColor="@color/tab_tv_color"
        android:textSize="@dimen/sp_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_wallet" />
</android.support.constraint.ConstraintLayout>