<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_backgroud"
    android:orientation="vertical"
    tools:context=".uipacakage.SetPwdActivity">

    <com.nyzc.gdm.currencyratio.View.CustomTitleBar
        android:id="@+id/custom_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:left_button_image="@mipmap/icon_left"
        app:show_left_button="true"
        app:show_right_button="false"
        android:background="@color/white"
        app:title_text="@string/ChangePassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginRight="@dimen/dp_13"
        android:layout_marginTop="@dimen/dp_90"
        android:background="@drawable/shape_login_createwallet"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rela_current_wallet_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:background="@color/white">

            <TextView
                android:paddingLeft="@dimen/dp_15"
                android:id="@+id/tv_current_wallet_pwd"
                android:layout_width="@dimen/dp_90"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/CurrentPassword"
                android:textColor="@color/tab_tv_color"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/edit_icurrent_wallet_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_current_wallet_pwd"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/currentpassword"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="@dimen/sp_13" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/tab_unselect"

            />

        <RelativeLayout
            android:id="@+id/rela_wallet_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TextView
                android:paddingLeft="@dimen/dp_15"
                android:id="@+id/tv_new_pwd_wallet_pwd"
                android:layout_width="@dimen/dp_90"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/NewPassword"
                android:textColor="@color/tab_tv_color"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/edit_new__wallet_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_new_pwd_wallet_pwd"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="@dimen/sp_13" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/tab_unselect" />

        <RelativeLayout
            android:id="@+id/rela_wallet_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1">

            <TextView
                android:paddingLeft="@dimen/dp_15"
                android:id="@+id/tv_new_pwd_wallet_pwd_again"
                android:layout_width="@dimen/dp_90"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/ConfirmPassword"
                android:textColor="@color/tab_tv_color"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/edit_new__wallet_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_new_pwd_wallet_pwd_again"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/RepeatNewPassword"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="@dimen/sp_13" />
        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rala_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/dp_13">

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/ForgotPassword"
            android:textColor="#ff444444"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/at_once_enter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_forget_pwd"
            android:gravity="center"
            android:text="@string/importrightnow"
            android:textColor="@color/comment_titlebar"
            android:textSize="11sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@mipmap/icon_shadow_wallet"
        android:gravity="center"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rala_forget_pwd" />
</LinearLayout>